# routes/index.js
@@ -3,8 +3,9 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 const baseController = require("../controllers/index.js")
 
-router.get("/", baseController.sendName)
+router.get("/dad", baseController.sendName)
 router.use("/contacts", require("./contacts"))
+router.use("/",  require('./swagger'))
 
 
 // router.use('/api-docs', swaggerUi.serve);
